--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,23 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Sudoku Starterclass
+email: patrikmihelson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+	Welcome to Sudoku Starterclass, an online tutorial website for Sudoku newcomers and beginners! If you've ever been intrigued by the captivating world of Sudoku but felt overwhelmed by its complexity, you've come to the right place. This website is designed to guide you through the fundamentals of Sudoku, providing step-by-step instructions and helpful tips to ensure you become a master solver in no time.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  p-lemonish
 
 # Build settings
 theme: minima
-  skin: dark
 plugins:
   - jekyll-feed
-
+minima:
+  skin: dark
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
