--- a/docs/_data/navigation-copy.yml
+++ b/docs/_data/navigation-copy.yml
@@ -20,14 +20,16 @@ docs:
       - title: "Explanation of Rows, Columns, and Boxes"
         url: /docs/basics/explanations
 
-  - title: "Solving Tips - Four Essential Techniques"
+  - title: "Solving Tips"
     url: /docs/solving-tips
     children:
+      - title: "4 Essential Techniques"
+        url: /docs/solving-tips/essential-techniques
       - title: "Single Candidates"
-        url: /docs/solving-tips/single-candidates
+        url: /docs/solving-tips/essential-techniques/single-candidates
       - title: "Naked Candidates"
-        url: /docs/solving-tips/naked-candidates
+        url: /docs/solving-tips/essential-techniques/naked-candidates
       - title: "Hidden Candidates"
-        url: /docs/solving-tips/hidden-candidates
+        url: /docs/solving-tips/essential-techniques/hidden-candidates
       - title: "Intersection Removal"
-        url: /docs/solving-tips/intersection-removal
+        url: /docs/solving-tips/essential-techniques/intersection-removal
