--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Sudoku Starterclass
+title: Sudoku Starterclass - Learn the Art of Sudoku!
 plugins:
   - jekyll-include-cache
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
