--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,33 +1,35 @@
 # main links
 main:
   - title: "Home"
-    url: /docs/home
+    url: /
 
 docs:
   - title: "Home"
-    url: /docs/home
+    url: /
     children:
       - title: "A Brief Introduction to Sudoku"
-        url: /docs/home/introduction-to-sudoku
+        url: /#a-brief-introduction-to-sudoku
       - title: "Benefits of Playing Sudoku"
-        url: /docs/home/benefits-of-playing-sudoku
+        url: /#benefits-of-playing-sudoku
 
   - title: "Basics"
-    url: /docs/basics
+    url: /basics
     children:
-      - title: "Simple Overview of Sudoku Rules"
-        url: /docs/basics/overview-of-sudoku-rules
-      - title: "Explanation of Rows, Columns, and Boxes"
-        url: /docs/basics/explanations
+      - title: "Overview of Sudoku Rules"
+        url: /basics/#overview-of-sudoku-rules
+      - title: "Rules for Filling the Grid"
+        url: /basics/#rules-for-filling-the-grid
+      - title: "Example: Solving a Sudoku Puzzle"
+        url: /basics/#example-solving-a-sudoku-puzzle
 
   - title: "Sudoku Solving Tips"
-    url: /docs/solving-tips
+    url: /solving-tips
     children:
       - title: "Single Candidates"
-        url: /docs/solving-tips/single-candidates
+        url: /solving-tips/#single-candidates
       - title: "Naked Candidates"
-        url: /docs/solving-tips/naked-candidates
+        url: /solving-tips/#naked-candidates
       - title: "Hidden Candidates"
-        url: /docs/solving-tips/hidden-candidates
+        url: /solving-tips/#hidden-candidates
       - title: "Intersection Removal"
-        url: /docs/solving-tips/intersection-removal
+        url: /solving-tips/#intersection-removal
